conformance/tests/tlsroute-mixed-termination-same-namespace.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-mixed-termination
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: tls-terminate
    port: 8883
    protocol: TLS
    hostname: tls.example.com # This is the valid cert SAN
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-terminate-checks-certificate
  - name: tls-passthrough
    port: 8883
    protocol: TLS
    hostname: abc.example.com # This is the valid cert on backend
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Passthrough
---
# Route for Passthrough
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: gateway-conformance-mixed-passthroughroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-tlsroute-mixed-termination
    namespace: gateway-conformance-infra
  hostnames:
  - abc.example.com
  rules:
  - backendRefs:
    - name: tcp-backend
      port: 8443
---
# TLSRoute and service for the terminated TCP service
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: gateway-conformance-mixed-terminateroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-tlsroute-mixed-termination
    namespace: gateway-conformance-infra
  hostnames:
  - tls.example.com
  rules:
  - backendRefs:
    - name: tcp-backend
      port: 3000
---
